--- a/style.html
+++ b/style.html
@@ -9,15 +9,14 @@
 		卡洛斯的反馈了索福克勒斯反馈卡斯决定放空间快睡觉地方和空间和第三方卡
 	</div>
 	<div>
-
-		<p>dev1</p>
-		<p>dev1</p>
-		<p>dev1</p>
-		<p>dev1</p>
-		<p>dev1</p>
-		<p>dev1</p>
-		<p>dev1</p>
-
+		dev1
+		dev1
+		dev1
+		dev1
+		dev1
+		dev1
+		dev1
+		dev1
 	</div>
 </body>
 </html>
